# olympic-data-visualized

./: .gitignore  Pipfile  README.md  pyproject.toml
mysite/blog/: models.py  urls.py
mysite/blog/templates/blog/: blog.html  post.html
mysite/mysite/: settings.py  settings_secret.py.example  urls.py
mysite/personal/: urls.py  views.py
mysite/personal/templates/personal/: header.html  home.html
mysite/visualData/: apps.py  models.py  urls.py  views.py
mysite/visualData/data/: README.md
mysite/visualData/management/commands/: importData.py
mysite/visualData/scripts/: importData.py
mysite/visualData/static/visualData/css/: visualData.css
mysite/visualData/templates/visualData/: basic.html  header.html  home.html  source.html  sources.html
mysite/visualData/templates/visualData/includes/: htmlsnippet.html
mysite/webapp/: urls.py
